# AmpScm

./: .editorconfig  .gitignore  AmpScm.sln  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  NuGet.Config  README.md  make-test-repos.cmd  vcpkg.json
src/: AmpScm.sln  CMakeLists.txt
src/Amp.Bucket.Tests/: Amp.Bucket.Tests.csproj  Amp.BucketTests.csproj  BasicTests.cs  GitPlumbingTests.cs  GitRepositoryTests.cs  GitTests.cs  PlumbingTests.cs  TestExtensions.cs  pack-d41166d573a3c25c1636635deaa3d1b03ad99f4f.idx
src/Amp.Buckets/: AggregateBucket.cs  Amp.Buckets.csproj  Amp.Buckets.snk  Bucket.Eol.cs  Bucket.Operations.cs  Bucket.cs  BucketBytes.Extensions.cs  BucketBytes.cs  BucketException.cs  BucketExtensions.cs  DisownBucket.cs  FileBucket.cs  IBucketCollection.cs  MemoryBucket.cs  NoCloseBucket.cs  ValueOrEof.cs
src/Amp.Git/: Amp.Git.csproj  GitBlob.cs  GitCommit.cs  GitObject.cs  GitReference.cs  GitRepository.cs  GitSignature.cs  GitTag.cs  GitTools.cs  GitTree.cs  GitTreeEntry.cs  GitTreecs.cs
src/Amp.Git.Client/: Amp.Git.Client.csproj  GitClient.cs
src/AmpScm.AsyncIO/: AmpScm.AsyncIO.csproj  AsyncFile.cs  NativeMethods.cs
src/AmpScm.Buckets/: AggregateBucket.cs  AmpScm.Buckets.csproj  Bucket.Eol.cs  Bucket.Operations.cs  Bucket.cs  BucketBytes.Extensions.cs  BucketBytes.cs  BucketException.cs  BucketPollBytes.cs  (+11 more)
src/AmpScm.Buckets.Git/: AmpScm.Buckets.Git.csproj  Compatibility.cs  GitBucketExtensions.cs  GitException.cs  GitId.cs  GitObjectType.cs  PublicAPI.Unshipped.txt
src/AmpScm.Buckets.Http/: AmpScm.Buckets.Http.csproj  BucketWebRequest.cs
(+397 files in other folders)
