
include_directories(../../vcpkg/installed/x64-windows-static-md/include)

add_subdirectory(libamp_common)
add_subdirectory(libamp_client)
add_subdirectory(libamp_src)
add_subdirectory(libamp_src_git)
add_subdirectory(libamp_src_subversion)
add_subdirectory(libamp_store)
add_subdirectory(libamp_store_git)